--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
@@ -49,4 +49,3 @@
     "gh-pages": "^3.2.3"
   }
 }
-
